# serif-health-takehome

./: README.md  ny_urls.txt  ny_urls_0.txt  ny_urls_1.txt  ny_urls_2.txt  ny_urls_3.txt  ny_urls_4.txt  ny_urls_5.txt  ny_urls_6.txt  ny_urls_7.txt  pyproject.toml  test.txt
notebooks/: 010504941.json  exploring-plan-data.ipynb  sample.json  sample2.json  test_crosswalk.json
serif_health_takehome/: __init__.py  solution_v1.py  solution_v2.py  solution_v3.py
test_data/: data.json  error.json
